# internal/app/model/file.go
@@ -1,0 +1,6 @@
+package model
+
+type UploadFileResponse struct {
+	ID  string `json:"id"`
+	URL string `json:"url"`
+}
